imageApp/imgSearchApp/app/force-app/main/default/objects/Image__c/fields/albumId__c.field-meta.xml
<CustomField>
    <fullName>albumId__c</fullName>
    <label>albumId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>