imageApp/imgSearchApp/app/force-app/main/default/objects/Image__c/fields/thumbnailUrl__c.field-meta.xml
<CustomField>
    <fullName>thumbnailUrl__c</fullName>
    <label>thumbnailUrl</label>
    <type>TextArea</type>
</CustomField>