imageApp/imgSearchApp/app/force-app/main/default/objects/Image__c/fields/title__c.field-meta.xml
<CustomField>
    <fullName>title__c</fullName>
    <label>title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>