imageApp/imgSearchApp/app/force-app/main/default/objects/Image__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <label>url</label>
    <type>TextArea</type>
</CustomField>